--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="curtains">
   <div class="curtains__inner">
     <ul>
-      <li><a href="/">Главная</a></li>
+      <li><a href="/index.html">Главная</a></li>
       <li><a href="/product.html">Страница продукта</a></li>
       <li><a href="/privacy.html">Условия проката</a></li>
       <li><a href="/rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
