--- a/product.html
+++ b/product.html
@@ -11,10 +11,10 @@
     <div class="curtains">
   <div class="curtains__inner">
     <ul>
-      <li><a href="/">Главная</a></li>
-      <li><a href="/product.html">Страница продукта</a></li>
-      <li><a href="/privacy.html">Условия проката</a></li>
-      <li><a href="/rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="product.html">Страница продукта</a></li>
+      <li><a href="privacy.html">Условия проката</a></li>
+      <li><a href="rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
     </ul>
   </div>
 </div>
