--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
     <nav class="nav ">
       <ul>
         <li>
-          <a href="/">товары</a>
+          <a href="/index.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -35,7 +35,7 @@
           <button class="header__lang">Русский</button>
         </li>
       </ul>
-      <a href="/" class="header__logo ">
+      <a href="index.html" class="header__logo ">
         <svg
           width="110"
           height="74"
