--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
     <nav class="nav dark">
       <ul>
         <li>
-          <a href="/">товары</a>
+          <a href="/index.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -35,7 +35,7 @@
           <button class="header__lang">Русский</button>
         </li>
       </ul>
-      <a href="/" class="header__logo dark">
+      <a href="index.html" class="header__logo dark">
         <svg
           width="110"
           height="74"
@@ -109,7 +109,7 @@
 </div>
  <section class="product-about">
   <div class="product-about__slider">
-    <a href="/" class="btn-back">
+    <a href="index.html" class="btn-back">
       <img src="img/arrow-back.svg" alt="" />
       back to all
     </a>
