--- a/rent.html
+++ b/rent.html
@@ -25,7 +25,7 @@
     <nav class="nav dark">
       <ul>
         <li>
-          <a href="/">товары</a>
+          <a href="/index.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -37,7 +37,7 @@
           <button class="header__lang">Русский</button>
         </li>
       </ul>
-      <a href="/" class="header__logo dark">
+      <a href="index.html" class="header__logo dark">
         <svg
           width="110"
           height="74"
