--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="nav ">
       <ul>
         <li>
-          <a href="/">товары</a>
+          <a href="/index.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -36,7 +36,7 @@
           <button class="header__lang">Русский</button>
         </li>
       </ul>
-      <a href="/" class="header__logo ">
+      <a href="index.html" class="header__logo ">
         <svg
           width="110"
           height="74"
