--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="nav ">
       <ul>
         <li>
-          <a href="/index.html">товары</a>
+          <a href="index.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
