--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
     <nav class="nav ">
       <ul>
         <li>
-          <a href="/index.html">товары</a>
+          <a href="index.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
