--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="curtains__inner">
     <ul>
       <li><a href="index.html">Главная</a></li>
+      <li><a href="products.html">Товары</a></li>
       <li><a href="product.html">Страница продукта</a></li>
       <li><a href="privacy.html">Условия проката</a></li>
       <li><a href="rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
@@ -24,7 +25,7 @@
     <nav class="nav ">
       <ul>
         <li>
-          <a href="index.html">товары</a>
+          <a href="products.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -93,11 +94,9 @@
         <li>
           <a href="#">Контакты</a>
         </li>
+
         <li>
-          <a href="#">Рус</a>
-        </li>
-        <li>
-          <a href="#" class="basket-btn">Корзина</a>
+          <button class="basket-btn">Корзина</button>
         </li>
         <li class="hide">
           <button class="header__burger">
@@ -140,34 +139,34 @@
       <div class="filter__left">
         <ul class="filter__left-box">
           <li>
-            <a href="" class="filter__btn filter__btn-action">все</a>
+            <a href="#" class="filter__btn filter__btn-action">все</a>
           </li>
           <li>
-            <a href="" class="filter__btn">фотоаппараты</a>
+            <a href="#" class="filter__btn">фотоаппараты</a>
           </li>
           <li>
-            <a href="" class="filter__btn">объективы</a>
+            <a href="#" class="filter__btn">объективы</a>
           </li>
           <li>
-            <a href="" class="filter__btn">синхронизаторы</a>
+            <a href="#" class="filter__btn">синхронизаторы</a>
           </li>
           <li>
-            <a href="" class="filter__btn">карты памяти</a>
+            <a href="#" class="filter__btn">карты памяти</a>
           </li>
           <li>
-            <a href="" class="filter__btn">аксессуары</a>
+            <a href="#" class="filter__btn">аксессуары</a>
           </li>
           <li>
-            <a href="" class="filter__btn">вспышки</a>
+            <a href="#" class="filter__btn">вспышки</a>
           </li>
           <li>
-            <a href="" class="filter__btn">аккумуляторы и питание</a>
+            <a href="#" class="filter__btn">аккумуляторы и питание</a>
           </li>
           <li>
-            <a href="" class="filter__btn">софтбоксы и отражатели</a>
+            <a href="#" class="filter__btn">софтбоксы и отражатели</a>
           </li>
           <li>
-            <a href="" class="filter__btn">фото штативы и моноподы</a>
+            <a href="#" class="filter__btn">фото штативы и моноподы</a>
           </li>
         </ul>
       </div>
@@ -265,6 +264,80 @@
 </section>
 
     <section class="products">
+  <div class="products__grid">
+    <a href="product.html" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-1.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-2.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-2-big.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-3.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-4.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-5.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-1.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-2.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-3.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-4.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-1.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+    <a href="#" class="products__item">
+      <div class="products__item-image">
+        <img src="img/image-1.png" alt="image" />
+      </div>
+      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+    </a>
+  </div>
   <div class="products__grid">
     <a href="product.html" class="products__item">
       <div class="products__item-image">
@@ -709,6 +782,9 @@
     ></script>
     <script src="js/SplitText.min.js"></script>
     <script src="js/DrawSVGPlugin.js"></script>
+    <script src="js/form.js"></script>
+    <script src="js/filter.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/slider.js"></script>
   </body>
 </html>
