--- a/privacy.html
+++ b/privacy.html
@@ -12,6 +12,7 @@
   <div class="curtains__inner">
     <ul>
       <li><a href="index.html">Главная</a></li>
+      <li><a href="products.html">Товары</a></li>
       <li><a href="product.html">Страница продукта</a></li>
       <li><a href="privacy.html">Условия проката</a></li>
       <li><a href="rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
@@ -23,7 +24,7 @@
     <nav class="nav ">
       <ul>
         <li>
-          <a href="index.html">товары</a>
+          <a href="products.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -92,11 +93,9 @@
         <li>
           <a href="#">Контакты</a>
         </li>
+
         <li>
-          <a href="#">Рус</a>
-        </li>
-        <li>
-          <a href="#" class="basket-btn">Корзина</a>
+          <button class="basket-btn">Корзина</button>
         </li>
         <li class="hide">
           <button class="header__burger">
