--- a/rent.html
+++ b/rent.html
@@ -12,6 +12,7 @@
   <div class="curtains__inner">
     <ul>
       <li><a href="index.html">Главная</a></li>
+      <li><a href="products.html">Товары</a></li>
       <li><a href="product.html">Страница продукта</a></li>
       <li><a href="privacy.html">Условия проката</a></li>
       <li><a href="rent.html">АРЕНДУЙТЕ ТЕХНИКУ</a></li>
@@ -25,7 +26,7 @@
     <nav class="nav dark">
       <ul>
         <li>
-          <a href="/index.html">товары</a>
+          <a href="products.html">товары</a>
         </li>
         <li>
           <a href="#">гагарин шоу</a>
@@ -94,11 +95,9 @@
         <li>
           <a href="#">Контакты</a>
         </li>
+
         <li>
-          <a href="#">Рус</a>
-        </li>
-        <li>
-          <a href="#" class="basket-btn">Корзина</a>
+          <button class="basket-btn">Корзина</button>
         </li>
         <li class="hide">
           <button class="header__burger">
@@ -410,6 +409,7 @@
     ></script>
     <script src="js/SplitText.min.js"></script>
     <script src="js/DrawSVGPlugin.js"></script>
+    <script src="js/form.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
