--- a/products.html
+++ b/products.html
@@ -131,34 +131,42 @@
       <div class="filter__left">
         <ul class="filter__left-box">
           <li>
-            <a href="#" class="filter__btn filter__btn-action">все</a>
+            <button type="button" class="filter__btn filter__btn-action">
+              все
+            </button>
           </li>
           <li>
-            <a href="#" class="filter__btn">фотоаппараты</a>
+            <button type="button" class="filter__btn">фотоаппараты</button>
           </li>
           <li>
-            <a href="#" class="filter__btn">объективы</a>
+            <button type="button" class="filter__btn">объективы</button>
           </li>
           <li>
-            <a href="#" class="filter__btn">синхронизаторы</a>
+            <button type="button" class="filter__btn">синхронизаторы</button>
           </li>
           <li>
-            <a href="#" class="filter__btn">карты памяти</a>
+            <button type="button" class="filter__btn">карты памяти</button>
           </li>
           <li>
-            <a href="#" class="filter__btn">аксессуары</a>
+            <button type="button" class="filter__btn">аксессуары</button>
           </li>
           <li>
-            <a href="#" class="filter__btn">вспышки</a>
+            <button type="button" class="filter__btn">вспышки</button>
           </li>
           <li>
-            <a href="#" class="filter__btn">аккумуляторы и питание</a>
+            <button type="button" class="filter__btn">
+              аккумуляторы и питание
+            </button>
           </li>
           <li>
-            <a href="#" class="filter__btn">софтбоксы и отражатели</a>
+            <button type="button" class="filter__btn">
+              софтбоксы и отражатели
+            </button>
           </li>
           <li>
-            <a href="#" class="filter__btn">фото штативы и моноподы</a>
+            <button type="button" class="filter__btn">
+              фото штативы и моноподы
+            </button>
           </li>
         </ul>
       </div>
@@ -176,7 +184,7 @@
             <img src="img/search.svg" alt="" class="filter__search-img" />
           </button>
         </div>
-        <button class="filter__btn-small">Фильтры</button>
+        <button type="button" class="filter__btn-small">Фильтры</button>
       </div>
     </div>
   </form>
@@ -551,12 +559,11 @@
       </a>
     </div>
     <div class="basket__bottom">
-      <a href="#" class="btn"
+      <a href="rent.html" class="btn btn-show"
         ><span class="btn__brackets btn__brackets--left">(</span>
         go to checkout
-
-        <span class="btn__brackets btn__brackets--right">)</span></a
-      >
+        <span class="btn__brackets btn__brackets--right">)</span>
+      </a>
     </div>
   </div>
 </div>
@@ -575,7 +582,7 @@
         style="background-image: url(img/error/5.jpg)"
       ></div>
       <div class="fix-nav__block -block-1 h2">
-        <a href="/guests" class="fix-nav__link --big">Наши Гости</a>
+        <a href="products.html" class="fix-nav__link --big">Товары</a>
       </div>
       <div class="fix-nav__block -block-2 h2">
         <div
@@ -584,19 +591,18 @@
         ></div>
         <div class="fix-nav__links">
           <a
-            href="/catalog"
+            href="index.html"
             class="fix-nav__link --big nuxt-link-exact-active nuxt-link-active"
             aria-current="page"
-            >Видео Каталог</a
+            >Гагарин шоу</a
           >
-          <a href="/about" class="fix-nav__link --big">Кто мы</a>
+          <a href="privacy.html" class="fix-nav__link --big">Условия проката</a>
         </div>
       </div>
       <div class="fix-nav__block -block-3 h2">
         <div class="fix-nav__links">
           <a href="/contacts" class="fix-nav__link --small">Контакты</a>
-          <a href="/lottery" class="fix-nav__link --small">Розыгрыши</a>
-          <a href="/shop" class="fix-nav__link --small">Магазин</a>
+          <a href="/lottery" class="fix-nav__link --small">Корзина</a>
         </div>
         <div
           class="fix-nav__img -img-3"
