--- a/rent.html
+++ b/rent.html
@@ -294,12 +294,11 @@
       </a>
     </div>
     <div class="basket__bottom">
-      <a href="#" class="btn"
+      <a href="rent.html" class="btn btn-show"
         ><span class="btn__brackets btn__brackets--left">(</span>
         go to checkout
-
-        <span class="btn__brackets btn__brackets--right">)</span></a
-      >
+        <span class="btn__brackets btn__brackets--right">)</span>
+      </a>
     </div>
   </div>
 </div>
@@ -318,7 +317,7 @@
         style="background-image: url(img/error/5.jpg)"
       ></div>
       <div class="fix-nav__block -block-1 h2">
-        <a href="/guests" class="fix-nav__link --big">Наши Гости</a>
+        <a href="products.html" class="fix-nav__link --big">Товары</a>
       </div>
       <div class="fix-nav__block -block-2 h2">
         <div
@@ -327,19 +326,18 @@
         ></div>
         <div class="fix-nav__links">
           <a
-            href="/catalog"
+            href="index.html"
             class="fix-nav__link --big nuxt-link-exact-active nuxt-link-active"
             aria-current="page"
-            >Видео Каталог</a
+            >Гагарин шоу</a
           >
-          <a href="/about" class="fix-nav__link --big">Кто мы</a>
+          <a href="privacy.html" class="fix-nav__link --big">Условия проката</a>
         </div>
       </div>
       <div class="fix-nav__block -block-3 h2">
         <div class="fix-nav__links">
           <a href="/contacts" class="fix-nav__link --small">Контакты</a>
-          <a href="/lottery" class="fix-nav__link --small">Розыгрыши</a>
-          <a href="/shop" class="fix-nav__link --small">Магазин</a>
+          <a href="/lottery" class="fix-nav__link --small">Корзина</a>
         </div>
         <div
           class="fix-nav__img -img-3"
