--- a/products.html
+++ b/products.html
@@ -662,15 +662,8 @@
   </div>
 </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
-      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="js/SplitText.min.js"></script>
-    <script src="js/DrawSVGPlugin.js"></script>
+    <script src="js/libs/gsap.js"></script>
+    <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/filter.js"></script>
     <script src="js/script.js"></script>
     <script src="js/slider.js"></script>
