--- a/product.html
+++ b/product.html
@@ -641,8 +641,15 @@
   </div>
 </div>
 
+    <button class="shop__bag hide-650">
+  <div class="shop__icon">
+    <span class="shop__count">10</span>
+  </div>
+</button>
+
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
+
     <script src="js/script.js"></script>
     <script src="js/slider.js"></script>
   </body>
