--- a/index.html
+++ b/index.html
@@ -673,8 +673,10 @@
       </div>
       <div class="fix-nav__block -block-3 h2">
         <div class="fix-nav__links">
-          <a href="/contacts" class="fix-nav__link --small">Контакты</a>
-          <a href="/lottery" class="fix-nav__link --small">Корзина</a>
+          <a href="#" class="fix-nav__link --small">Контакты</a>
+          <button href="#" class="fix-nav__link --small basket-btn">
+            Корзина
+          </button>
         </div>
         <div
           class="fix-nav__img -img-3"
