Split js into files

--- a/product.html
+++ b/product.html
@@ -599,10 +599,22 @@
   </div>
 </button>
 
+    <!-- Jquery -->
+    <script src="js/libs/jq-lib.js"></script>
+    <!-- Slick-slider lib -->
+    <script src="js/libs/slick-slider-lib.js"></script>
+
+    <!-- GSAP -->
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/myAnim.js"></script>
 
-    <script src="js/script.js"></script>
+    <!-- Styles -->
     <script src="js/slider.js"></script>
+    <script src="js/basket.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/curtains.js"></script>
+    <!-- На будущее calendar.js <script src="js/calendar.js"></script> -->
   </body>
 </html>
