--- a/index.html
+++ b/index.html
@@ -736,11 +736,18 @@
   </div>
 </div>
 
+
+    <!-- GSAP -->
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/myAnim.js"></script>
+    <!-- Styles -->
+    <script src="js/basket.js"></script>
+    <script src="js/grid-toggler.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/curtains.js"></script>
     <script src="js/form.js"></script>
     <script src="js/filter.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/slider.js"></script>
   </body>
 </html>
