--- a/privacy.html
+++ b/privacy.html
@@ -429,8 +429,14 @@
   </div>
 </div>
 
+    <!-- GSAP -->
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/myAnim.js"></script>
+    <!-- Styles -->
+    <script src="js/basket.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/curtains.js"></script>
   </body>
 </html>
