--- a/rent.html
+++ b/rent.html
@@ -355,9 +355,15 @@
 </div>
 
     </div>
+    <!-- GSAP -->
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
+    <script src="js/animation.js"></script>
+    <script src="js/myAnim.js"></script>
+    <!-- Styles -->
+    <script src="js/basket.js"></script>
+    <script src="js/burger.js"></script>
+    <script src="js/curtains.js"></script>
     <script src="js/form.js"></script>
-    <script src="js/script.js"></script>
   </body>
 </html>
