--- a/index.html
+++ b/index.html
@@ -370,14 +370,11 @@
       <span class="products__item-name">Canon EOS 5D Mark IV body</span>
     </a>
   </div>
-  <div class="btn-group">
-  <a href="#" class="btn"
+  <a href="#" class="btn btn-more"
     ><span class="btn__brackets btn__brackets--left">(</span>
     view more
     <span class="btn__brackets btn__brackets--right">)</span></a
   >
-</div>
-
 </section>
  <section class="about">
   <h2 class="about__title">
@@ -741,7 +738,7 @@
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
-    <script src="js/myAnim.js"></script>
+    <script src="js/my-anim.js"></script>
     <!-- Styles -->
     <script src="js/basket.js"></script>
     <script src="js/grid-toggler.js"></script>
