--- a/product.html
+++ b/product.html
@@ -608,7 +608,7 @@
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
-    <script src="js/myAnim.js"></script>
+    <script src="js/my-anim.js"></script>
 
     <!-- Styles -->
     <script src="js/slider.js"></script>
