--- a/rent.html
+++ b/rent.html
@@ -359,7 +359,7 @@
     <script src="js/libs/gsap.js"></script>
     <script src="js/libs/gsapPlugins.js"></script>
     <script src="js/animation.js"></script>
-    <script src="js/myAnim.js"></script>
+    <script src="js/my-anim.js"></script>
     <!-- Styles -->
     <script src="js/basket.js"></script>
     <script src="js/burger.js"></script>
