--- a/product.html
+++ b/product.html
@@ -289,7 +289,7 @@
         </div>
       </div>
 
-      <a href="#" class="btn"
+      <a href="rent.html" class="btn"
         ><span class="btn__brackets btn__brackets--left">(</span>
         rent
         <span class="btn__brackets btn__brackets--right">)</span></a
@@ -615,6 +615,6 @@
     <script src="js/basket.js"></script>
     <script src="js/burger.js"></script>
     <script src="js/curtains.js"></script>
-    <!-- На будущее calendar.js <script src="js/calendar.js"></script> -->
+    <script src="js/calendar.js"></script>
   </body>
 </html>
