--- a/products.html
+++ b/products.html
@@ -232,7 +232,7 @@
       </div>
       <span class="products__item-name">Canon EOS 5D Mark IV body</span>
     </a>
-    <a href="#" class="products__item">
+    <!-- <a href="#" class="products__item">
       <div class="products__item-image">
         <img src="img/image-3.png" alt="image" />
       </div>
@@ -243,8 +243,8 @@
         <img src="img/image-4.png" alt="image" />
       </div>
       <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
+    </a> -->
+    <!-- <a href="#" class="products__item">
       <div class="products__item-image">
         <img src="img/image-5.png" alt="image" />
       </div>
@@ -273,8 +273,8 @@
         <img src="img/image-4.png" alt="image" />
       </div>
       <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
+    </a> -->
+    <!-- <a href="#" class="products__item">
       <div class="products__item-image">
         <img src="img/image-1.png" alt="image" />
       </div>
@@ -285,9 +285,9 @@
         <img src="img/image-1.png" alt="image" />
       </div>
       <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
+    </a> -->
   </div>
-  <div class="products__grid">
+  <!-- <div class="products__grid">
     <a href="product.html" class="products__item">
       <div class="products__item-image">
         <img src="img/image-1.png" alt="image" />
@@ -360,7 +360,7 @@
       </div>
       <span class="products__item-name">Canon EOS 5D Mark IV body</span>
     </a>
-  </div>
+  </div> -->
   <a href="#" class="btn btn-more"
     ><span class="btn__brackets btn__brackets--left">(</span>
     view more
