--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     <h1 class="intro__bottom-right intro__head">rental</h1>
   </div>
 </section>
- <section class="catalog">
+
+    <section class="catalog">
   <form class="catalog__form" method="POST">
     <div class="filter">
       <div class="filter__left">
@@ -142,7 +143,6 @@
             <img src="img/search.svg" alt="" class="filter__search-img" />
           </button>
         </div>
-        <button type="button" class="filter__btn-small">Фильтры</button>
       </div>
     </div>
   </form>
@@ -220,8 +220,7 @@
     </div>
   </div>
 </section>
-
-    <section class="products">
+ <section class="products">
   <div class="products__grid">
     <a href="product.html" class="products__item">
       <div class="products__item-image">
@@ -376,7 +375,8 @@
     <span class="btn__brackets btn__brackets--right">)</span></a
   >
 </section>
- <section class="about">
+
+    <section class="about">
   <h2 class="about__title">
     <span class="about__title-top">про gagarin rental</span>
     <span class="about__title-bottom">что мы делаем и как мы работаем?</span>
@@ -416,8 +416,7 @@
     </div>
   </div>
 </section>
-
-    <section class="statistics">
+ <section class="statistics">
   <div class="statistics__box">
     <div class="statistics__item-wrapper">
       <div class="statistics__item">
@@ -478,7 +477,7 @@
     <span class="input-placeholder-error">The field is required.</span>
   </div>
   <div class="input__wrapp">
-    <input type="text" name="name" class="_req message__input" />
+    <input type="text" name="message" class="_req message__input" />
     <span class="input-placeholder p1 p1-light">ваше сообщение</span>
     <span class="input-placeholder-error">The field is required.</span>
   </div>
