--- a/product.html
+++ b/product.html
@@ -37,7 +37,7 @@
         </li>
       </ul>
       <a href="index.html" class="header__logo dark">
-        <img src="img/logo.svg" alt="" />
+        <img src="img/logo-black.svg" alt="" />
       </a>
       <ul>
         <li>
@@ -60,7 +60,7 @@
   <div class="product-about__slider">
     <a href="index.html" class="btn-back">
       <img src="img/arrow-back.svg" alt="" />
-      back to all
+      <span>back to all</span>
     </a>
     <div class="slider">
       <div class="slider-for">
@@ -81,13 +81,7 @@
   </div>
   <div class="product-about__center">
     <div class="product-about__wrapp">
-      <h2 class="product-about__center-head">
-        Canon EOS 5D Mark IV body
-
-        <a href="#" title="title" class="title">
-          <img src="img/help.svg" alt="help"
-        /></a>
-      </h2>
+      <h2 class="product-about__center-head">Canon EOS 5D Mark IV body</h2>
     </div>
     <div class="product-about__prices">
       <span class="product-about__prices--work-day">960 uah / день </span>
@@ -95,11 +89,14 @@
         >выходные: 1600 uah / день</span
       >
     </div>
-    <p class="product-about__center-descr">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In cras tincidunt
-      viverra nec, ullamcorper. Eget senectus ac libero, sed aliquet neque
-      faucibus. Tortor elit scelerisque tellu integer donec turpis
-    </p>
+    <div class="product-about__center-descr">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In cras
+        tincidunt viverra nec, ullamcorper. Eget senectus ac libero, sed aliquet
+        neque faucibus. Tortor elit scelerisque tellu integer donec turpis
+      </p>
+      <p>text</p>
+    </div>
     <div class="product-about__center-counters">
       <div class="buttons">
         <button class="minus">
