--- a/rent.html
+++ b/rent.html
@@ -39,7 +39,7 @@
         </li>
       </ul>
       <a href="index.html" class="header__logo dark">
-        <img src="img/logo.svg" alt="" />
+        <img src="img/logo-black.svg" alt="" />
       </a>
       <ul>
         <li>
@@ -86,7 +86,7 @@
         <span class="input-placeholder p1 p1-light">Ваш город</span>
         <span class="input-placeholder-error">The field is required.</span>
       </div>
-      <div class="input__wrapp error">
+      <div class="input__wrapp">
         <input type="text" name="tel" class="_req message__input" />
         <span class="input-placeholder p1 p1-light">Ваш телефон</span>
         <span class="input-placeholder-error">The field is required.</span>
