--- a/product.html
+++ b/product.html
@@ -619,6 +619,7 @@
     <!-- Styles -->
     <script src="js/slider.js"></script>
     <script src="js/basket.js"></script>
+    <script src="js/scroll.js"></script>
     <script src="js/burger.js"></script>
     <script src="js/curtains.js"></script>
     <script src="js/calendar.js"></script>
