поправил валидацию и сделал правку с отступом 6-я строка

--- a/products.html
+++ b/products.html
@@ -236,135 +236,135 @@
           </div>
           <span class="products__item-name">Canon EOS 5D Mark IV body</span>
         </a>
-        <!-- <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-5.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
       </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
+      <div class="products__grid">
+        <a href="product.html" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2-big.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-5.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-2.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-3.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-4.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
+        <a href="#" class="products__item">
+          <div class="products__item-image">
+            <img src="img/image-1.png" alt="image" />
+          </div>
+          <span class="products__item-name">Canon EOS 5D Mark IV body</span>
+        </a>
       </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a> -->
-        <!-- <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-5.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a> -->
-        <!-- <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a> -->
-      </div>
-      <!-- <div class="products__grid">
-    <a href="product.html" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2-big.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-5.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-2.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-3.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-4.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-    <a href="#" class="products__item">
-      <div class="products__item-image">
-        <img src="img/image-1.png" alt="image" />
-      </div>
-      <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-    </a>
-  </div> -->
       <a href="#" class="btn btn-more"
         ><span class="btn__brackets btn__brackets--left">(</span>
         view more
