--- a/products.html
+++ b/products.html
@@ -27,7 +27,7 @@
       <header class="header h_fix">
         <nav class="nav">
           <ul>
-            <li>
+            <li class="active">
               <a href="products.html">товары</a>
             </li>
             <li>
