--- a/rent.html
+++ b/rent.html
@@ -35,7 +35,7 @@
               <li>
                 <a href="#">гагарин шоу</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="privacy.html">условия проката</a>
               </li>
               <li class="hide">
