--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
             <li>
               <a href="#">гагарин шоу</a>
             </li>
-            <li>
+            <li class="active">
               <a href="privacy.html">условия проката</a>
             </li>
             <li class="hide">
