--- a/rent.html
+++ b/rent.html
@@ -235,36 +235,75 @@
             </div>
           </div>
           <div class="basket__center">
-            <a href="product.html" class="products__item">
+            <div class="products__item">
               <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-              <div class="products__item-image">
+              <a href="#" class="products__item-image">
+                <button class="products__del">
+                  <svg
+                    width="17"
+                    height="17"
+                    viewBox="0 0 17 17"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <line
+                      y1="-0.5"
+                      x2="22.1269"
+                      y2="-0.5"
+                      transform="matrix(0.722639 0.691226 -0.722639 0.691226 0.010498 1.20532)"
+                      stroke="#0A0A0A"
+                    />
+                    <line
+                      y1="-0.5"
+                      x2="22.1269"
+                      y2="-0.5"
+                      transform="matrix(-0.722639 0.691226 -0.722639 -0.691226 15.9895 0.5)"
+                      stroke="#0A0A0A"
+                    />
+                  </svg>
+                </button>
                 <img src="img/image-1.png" alt="image" />
                 <span class="products__item-info"
                   >17 февраля - 21 февраля, 1800 uah</span
                 >
-              </div>
-            </a>
-            <a href="product.html" class="products__item">
+              </a>
+            </div>
+            <div class="products__item">
               <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-              <div class="products__item-image">
+              <a href="#" class="products__item-image">
+                <button class="products__del">
+                  <svg
+                    width="17"
+                    height="17"
+                    viewBox="0 0 17 17"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <line
+                      y1="-0.5"
+                      x2="22.1269"
+                      y2="-0.5"
+                      transform="matrix(0.722639 0.691226 -0.722639 0.691226 0.010498 1.20532)"
+                      stroke="#0A0A0A"
+                    />
+                    <line
+                      y1="-0.5"
+                      x2="22.1269"
+                      y2="-0.5"
+                      transform="matrix(-0.722639 0.691226 -0.722639 -0.691226 15.9895 0.5)"
+                      stroke="#0A0A0A"
+                    />
+                  </svg>
+                </button>
                 <img src="img/image-1.png" alt="image" />
                 <span class="products__item-info"
                   >17 февраля - 21 февраля, 1800 uah</span
                 >
-              </div>
-            </a>
-            <a href="product.html" class="products__item">
-              <span class="products__item-name">Canon EOS 5D Mark IV body</span>
-              <div class="products__item-image">
-                <img src="img/image-1.png" alt="image" />
-                <span class="products__item-info"
-                  >17 февраля - 21 февраля, 1800 uah</span
-                >
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
           <div class="basket__bottom">
-            <a href="rent.html" class="btn btn-show"
+            <a href="rent.html" class="btn btn-show btn-checkout"
               ><span class="btn__brackets btn__brackets--left">(</span>
               go to checkout
               <span class="btn__brackets btn__brackets--right">)</span>
