сделал логику календаря

--- a/product.html
+++ b/product.html
@@ -245,15 +245,15 @@
                 <li class="calendar__item passed">09</li>
                 <li class="calendar__item passed">10</li>
                 <li class="calendar__item passed">11</li>
-                <li class="calendar__item current">12</li>
-                <li class="calendar__item">13</li>
-                <li class="calendar__item">14</li>
-                <li class="calendar__item">15</li>
-                <li class="calendar__item">16</li>
+                <li class="calendar__item passed">12</li>
+                <li class="calendar__item passed">13</li>
+                <li class="calendar__item passed">14</li>
+                <li class="calendar__item passed">15</li>
+                <li class="calendar__item current">16</li>
                 <li class="calendar__item">17</li>
                 <li class="calendar__item">18</li>
                 <li class="calendar__item">19</li>
-                <li class="calendar__item plan">20</li>
+                <li class="calendar__item">20</li>
                 <li class="calendar__item">21</li>
                 <li class="calendar__item">22</li>
                 <li class="calendar__item">23</li>
